<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_bridge</name>
  <version>0.1.0</version>
  <description>Action bridge for the ROSCon 2021 ROS-Industrial Scan-N-Plan Workshop</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- TODO: state ROS1 and ROS2 dependencies -->
  <depend>tesseract_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
