<?xml version="1.0"?>
<package format="2">
  <name>snp_bringup_ros1</name>
  <version>0.1.0</version>
  <description>This is the bringup package for launch the ros1 components of the workshop</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <exec_depend>snp_motion_planning</exec_depend>
  <exec_depend>snp_support</exec_depend>
  <exec_depend>tesseract_rviz</exec_depend>

  <export>
  </export>
</package>
