<?xml version="1.0"?>
<package format="3">
  <name>roscon_msgs</name>
  <version>0.0.0</version>
  <description>The ros messages and service definitions for the roscon 2021 demo</description>
  <maintainer email="colin.lewis@swri.org">Colin Lewis</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
